--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="150px"
+        android:id="@+id/btn_cceshi"
+        android:text="Dialog测试"/>
+
 </android.support.constraint.ConstraintLayout>
