--- a/dreamtools/src/main/res/values/colors.xml
+++ b/dreamtools/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="blue_00b4f0">#00b4f0</color>
     <color name="gray_595959">#595959</color>
     <color name="gray_737375">#737375</color>
-    <color name="blue_0180c6">#0180c6</color>
+    <color name="blue_045987">#045987</color>
     <color name="blue_0080c6">#0080c6</color>
     <color name="red_ff2600">#ff2600</color>
     <color name="balck_333333">#333333</color>
