--- a/dreamtools/src/main/res/layout/dialog_show_tip.xml
+++ b/dreamtools/src/main/res/layout/dialog_show_tip.xml
@@ -32,9 +32,21 @@
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/line"
         android:layout_width="fill_parent"
         android:layout_height="1px"
         android:background="@color/blue_00b4f0" />
+
+    <ProgressBar
+        android:id="@+id/bar_progress"
+        style="@style/progress_wait"
+        android:layout_width="match_parent"
+        android:layout_height="10dip"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dip"
+        android:layout_marginRight="10dip"
+        android:visibility="gone"
+        android:background="#ffffff" />
 
     <TextView
         android:id="@+id/dialog_tip_content"
@@ -49,8 +61,8 @@
         android:id="@+id/dialog_btn_ll"
         android:layout_width="fill_parent"
         android:layout_height="46dp"
-        android:gravity="center"
         android:layout_margin="10dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
