--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,7 +112,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="xxxxxxxxxxxxxxxx" />
+            android:text="百度语音播报" />
 
         <Button
             android:id="@+id/btn_11"
