1、添加底部弹框

--- a/dreamtools/src/main/res/values/colors.xml
+++ b/dreamtools/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="blue_0080c6">#0080c6</color>
     <color name="red_ff2600">#ff2600</color>
     <color name="balck_333333">#333333</color>
+    <color name="dream_line_color">#cccccc</color>
+    <color name="dream_normal_color">#00B596</color>
 </resources>
