--- a/dreamtools/src/main/res/values/colors.xml
+++ b/dreamtools/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="transparent_white">#99FFFFFF</color>
-    <color name="white">#ffffff</color>
-    <color name="blue_00b4f0">#00b4f0</color>
-    <color name="gray_595959">#595959</color>
-    <color name="gray_737375">#737375</color>
-    <color name="blue_045987">#045987</color>
-    <color name="blue_0080c6">#0080c6</color>
-    <color name="red_ff2600">#ff2600</color>
-    <color name="balck_333333">#333333</color>
+    <color name="dream_transparent_white">#99FFFFFF</color>
+    <color name="dream_white">#ffffff</color>
+    <color name="dream_blue_00b4f0">#00b4f0</color>
+    <color name="dream_gray_595959">#595959</color>
+    <color name="dream_gray_737375">#737375</color>
+    <color name="dream_blue_045987">#045987</color>
+    <color name="dream_blue_0080c6">#0080c6</color>
+    <color name="dream_red_ff2600">#ff2600</color>
+    <color name="dream_black_333333">#333333</color>
     <color name="dream_line_color">#cccccc</color>
     <color name="dream_normal_color">#00B596</color>
 </resources>
