--- a/dreamtools/src/main/res/values/styles.xml
+++ b/dreamtools/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="dialog_basic" parent="android:style/Theme.Dialog">
+    <style name="dream_dialog_basic" parent="android:style/Theme.Dialog">
         <item name="android:windowFrame">@null</item>
         <!-- 边框 -->
         <item name="android:windowIsFloating">true</item>
@@ -10,37 +10,74 @@
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:backgroundDimEnabled">true</item>
         <!-- 是否模糊 -->
-        <item name="android:windowBackground">@color/transparent_white</item>
+        <item name="android:windowBackground">@color/dream_transparent_white</item>
         <!-- 背景透明 -->
     </style>
 
-    <style name="blue_0180c6_21_left">
-        <item name="android:textColor">@color/blue_045987</item>
+    <style name="dream_blue_0180c6_21_left">
+        <item name="android:textColor">@color/dream_blue_045987</item>
         <item name="android:textSize">21sp</item>
         <item name="android:gravity">left</item>
     </style>
 
-    <style name="red_ff2600_21_right">
-        <item name="android:textColor">@color/red_ff2600</item>
+    <style name="dream_red_ff2600_21_right">
+        <item name="android:textColor">@color/dream_red_ff2600</item>
         <item name="android:textSize">21sp</item>
         <item name="android:gravity">right</item>
     </style>
 
-    <style name="black_333333_18_center">
-        <item name="android:textColor">@color/balck_333333</item>
+    <style name="dream_black_333333_18_center">
+        <item name="android:textColor">@color/dream_black_333333</item>
         <item name="android:textSize">18sp</item>
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="white_22_center">
-        <item name="android:textColor">@color/white</item>
+    <style name="dream_white_22_center">
+        <item name="android:textColor">@color/dream_white</item>
         <item name="android:textSize">22sp</item>
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="progress_wait" parent="@android:style/Widget.ProgressBar.Horizontal">
+    <style name="dream_progress_wait" parent="@android:style/Widget.ProgressBar.Horizontal">
         <item name="android:indeterminateOnly">true</item>
-        <item name="android:indeterminateDrawable">@drawable/progress_wait</item>
+        <item name="android:indeterminateDrawable">@drawable/dream_progress_wait</item>
     </style>
+
+    <declare-styleable name="dream_hudProgressWheel">
+        <attr name="mn_progressIndeterminate" format="boolean" />
+        <attr name="mn_barColor" format="color" />
+        <attr name="mn_rimColor" format="color" />
+        <attr name="mn_rimWidth" format="dimension" />
+        <attr name="mn_spinSpeed" format="float" />
+        <attr name="mn_barSpinCycleTime" format="integer" />
+        <attr name="mn_circleRadius" format="dimension" />
+        <attr name="mn_fillRadius" format="boolean" />
+        <attr name="mn_barWidth" format="dimension" />
+        <attr name="mn_linearProgress" format="boolean" />
+    </declare-styleable>
+
+    <declare-styleable name="dream_circularProgressBar">
+        <attr name="mn_progress" format="integer" />
+        <attr name="mn_progressbar_color" format="color" />
+        <attr name="mn_background_progressbar_color" format="color" />
+        <attr name="mn_progressbar_width" format="dimension" />
+        <attr name="mn_background_progressbar_width" format="dimension" />
+    </declare-styleable>
+
+    <!-- 自定义Dialog -->
+    <style name="dream_customDialog" parent="@android:style/Theme.Dialog">
+        <!-- 无边框 -->
+        <item name="android:windowFrame">@null</item>
+        <!-- 是否浮现在activity之上 -->
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <!--无遮罩效果-->
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
 
 </resources>
