--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="xxxxxxxxxxxxx" />
+
+        <com.ColorTextView
+            android:id="@+id/tv_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
