--- a/dreamtools/src/main/res/values/attrs.xml
+++ b/dreamtools/src/main/res/values/attrs.xml
@@ -1,3 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <declare-styleable name="CircleImageView">
+        <attr name="is_circle" format="boolean" />
+        <attr name="is_cover_src" format="boolean" />
+        <attr name="corner_radius" format="dimension" />
+        <attr name="corner_top_left_radius" format="dimension" />
+        <attr name="corner_top_right_radius" format="dimension" />
+        <attr name="corner_bottom_left_radius" format="dimension" />
+        <attr name="corner_bottom_right_radius" format="dimension" />
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+        <attr name="inner_border_width" format="dimension" />
+        <attr name="inner_border_color" format="color" />
+        <attr name="mask_color" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="MaskView">
+        <attr name="mv_width" format="dimension" />
+        <attr name="mv_height" format="dimension" />
+        <attr name="mv_backgroundColor" format="color" />
+        <attr name="mv_FrameBackgroundColor" format="color" />
+        <attr name="mv_scan_light" format="reference" />
+        <attr name="mv_inner_corner_color" format="color" />
+        <attr name="mv_inner_corner_length" format="dimension" />
+        <attr name="mv_inner_corner_width" format="dimension" />
+    </declare-styleable>
 </resources>
