--- a/dreamtools/src/main/res/layout/dream_dialog_toast.xml
+++ b/dreamtools/src/main/res/layout/dream_dialog_toast.xml
@@ -6,11 +6,21 @@
     android:orientation="vertical">
 
     <ImageView
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center_horizontal"
+        android:id="@+id/img_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_ok"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_ok" />
+
+    <ImageView
+        android:id="@+id/img_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/icon_error" />
+
     <TextView
         android:id="@+id/dialog_tip_content"
         style="@style/dream_black_333333_18_center"
