新增身份证信息录入

--- a/dreamtools/src/main/res/values/styles.xml
+++ b/dreamtools/src/main/res/values/styles.xml
@@ -30,6 +30,12 @@
         <item name="android:textSize">18sp</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="dream_black_333333_18_left">
+        <item name="android:textColor">@color/dream_black_333333</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:paddingLeft">8dp</item>
+    </style>
     <style name="dream_black_333333_16_center">
         <item name="android:textColor">@color/dream_black_333333</item>
         <item name="android:textSize">16sp</item>
