--- a/dreamtools/src/main/res/layout/dream_timeout_tip.xml
+++ b/dreamtools/src/main/res/layout/dream_timeout_tip.xml
@@ -55,8 +55,8 @@
         android:layout_gravity="center"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
-        android:visibility="gone"
-        android:background="#ffffff" />
+        android:background="#ffffff"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/dialog_tip_content"
@@ -72,11 +72,10 @@
         style="@style/dream_black_333333_16_center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minLines="1"
         android:layout_marginBottom="10dp"
-        android:textSize="30sp"
+        android:minLines="1"
+        android:text="10"
         android:textColor="@color/dream_red_ff2600"
-        android:text="10" />
-
+        android:textSize="30sp" />
 
 </LinearLayout>
