--- a/dreamtools/src/main/res/layout/dream_dialog_social_choice.xml
+++ b/dreamtools/src/main/res/layout/dream_dialog_social_choice.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="320dp"
+    android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:background="@drawable/dream_bg_choice"
     android:orientation="vertical">
@@ -13,23 +13,19 @@
 
         <TextView
             android:id="@+id/tv_left"
+            style="@style/dream_blue_0180c6_21_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:text="请选择社保卡读卡方式"
-            android:textColor="#19448E"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
+            android:layout_centerInParent="true"
+            android:text="请选择社保卡读卡方式" />
 
     </RelativeLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#aaaaaa" />
+    <ImageView
+        android:id="@+id/line"
+        android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:background="@color/dream_blue_00b4f0" />
 
 
     <LinearLayout
@@ -39,26 +35,22 @@
 
         <TextView
             android:id="@+id/tv_insert"
-            style="@style/dream_black_333333_18_center"
+            style="@style/dream_black_333333_16_center"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginStart="10dp"
-            android:text="插卡"
-            android:textSize="20sp" />
+            android:layout_height="50dp"
+            android:text="插卡" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#aaaaaa" />
+            android:background="#dddddd" />
 
         <TextView
             android:id="@+id/tv_hui"
-            style="@style/dream_black_333333_18_center"
+            style="@style/dream_black_333333_16_center"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
-            android:layout_marginStart="10dp"
-            android:text="挥卡(三代卡)"
-            android:textSize="20sp" />
+            android:layout_height="50dp"
+            android:text="挥卡(三代卡)" />
     </LinearLayout>
 
 
