--- a/dreamtools/src/main/res/values/colors.xml
+++ b/dreamtools/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="dream_white">#ffffff</color>
     <color name="dream_blue_00b4f0">#00b4f0</color>
     <color name="dream_gray_595959">#595959</color>
+    <color name="dream_gray_cbcbcb">#cbcbcb</color>
     <color name="dream_gray_737375">#737375</color>
     <color name="dream_blue_045987">#045987</color>
     <color name="dream_blue_0080c6">#0080c6</color>
