--- a/dreamtools/src/main/res/layout/dream_dialog_input_value.xml
+++ b/dreamtools/src/main/res/layout/dream_dialog_input_value.xml
@@ -40,8 +40,9 @@
         android:id="@+id/dialog_input_value"
         style="@style/dream_black_333333_18_center"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:layout_margin="10dp"
+        android:background="@drawable/dream_bg_input"
         android:inputType="numberPassword"
         android:maxLength="8"
         android:minLines="1" />
