--- a/dreamtools/src/main/res/values/styles.xml
+++ b/dreamtools/src/main/res/values/styles.xml
@@ -36,6 +36,19 @@
         <item name="android:gravity">left</item>
         <item name="android:paddingLeft">8dp</item>
     </style>
+
+    <style name="dream_black_333333_20_center">
+        <item name="android:textColor">@color/dream_black_333333</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <style name="dream_black_333333_20_left">
+        <item name="android:textColor">@color/dream_black_333333</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">left</item>
+        <item name="android:paddingLeft">8dp</item>
+    </style>
+
     <style name="dream_black_333333_16_center">
         <item name="android:textColor">@color/dream_black_333333</item>
         <item name="android:textSize">16sp</item>
